--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,12 @@
-.nav-main-container{
+.navbar-container{
   display: flex;
   justify-content: center;
+  width: 100%;
+  background-color: aqua;
+}
+
+.navlogo{
+  width: 50px;
+  height: 50px;
+
 }
