--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,12 +1,20 @@
-.navbar-container{
+
+
+.navbar-toggler-icon{
   display: flex;
-  justify-content: center;
-  width: 100%;
-  background-color: aqua;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
 }
 
-.navlogo{
-  width: 50px;
-  height: 50px;
-
+#nav-link {
+  color:white;
+  font-weight: bold;
+  font-size: 1em;
 }
+
+#nav-link:hover{
+  color:#DCCA87;
+  transition: -2px 2px ;
+}
+
