--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,12 +1,15 @@
 .nav-main-container{
-  z-index: 2;
-  position: relative;
+  width: 100vw;
+  height: 110px;
+  z-index: 4;
+  padding: 5px;
 }
 .navbar-toggler-icon{
   display: flex;
   background-color: white;
   border-radius: 5px;
   padding: 5px;
+  
 }
 
 #nav-link {
@@ -20,3 +23,48 @@
   transition: -2px 2px ;
 }
 
+
+
+/* On screens that are 992px or less, set the background color to blue */
+@media screen and (max-width: 992px) {
+.navlogo{
+  width: 75px;
+  height: 50px;
+  
+}
+
+.nav-main-container {
+  width: 100vw;
+  height: 25px;
+  z-index: 4;
+  position: relative;
+  padding: 5px;
+}
+
+#nav-link {
+  color: white;
+  font-weight: bold;
+  font-size: 12px;
+
+}
+}
+
+/* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 600px) {
+
+  
+.navlogo {
+    width: 50px;
+    height: 40px;
+
+  }
+
+  .nav-main-container {
+    width: 100vw;
+    height: 25px;
+    z-index: 4;
+    position: relative;
+    padding: 5px;
+  }
+  
+}
