--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,3 +3,10 @@
   height: 100vh;
   background-color: black;
 }
+
+.aboutus-container{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color:black;
+  }
