--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,8 +3,8 @@
   height: 110px;
   z-index: 4;
   padding: 5px;
-  position: fixed;
-  background-color: black;
+  /* position: fixed;
+  background-color: black; */
 }
 .navbar-toggler-icon{
   display: flex;
