--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,5 +11,14 @@
   background-color:black;
   }
 
+.chef-container{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-image: url('/Users/carloscordova/Desktop/restaurant-app/src/assets/bg.png') ;
+}
 
   
