media querry for chef done

--- a/src/components/Chef/Chef.css
+++ b/src/components/Chef/Chef.css
@@ -3,9 +3,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width:75%;
+  height: 75%;
+  margin: 5px;
   
+}
+
+.about-chef{
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .chef-img{
@@ -16,4 +22,45 @@
   font-weight: bold;
   font-size: 90px;
   color: #dcca87;
+}
+
+.chef-name{
+  color: #dcca87;
+}
+
+
+@media only screen and (max-width: 600px) {
+   
+.chef-main-container{
+  gap :30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  height: 100%;
+  
+}
+
+.chef-img{
+  width:150px; 
+}
+
+.chef-title{
+  font-weight: bold;
+  font-size: 30px;
+  color: #dcca87;
+}
+
+.quotes{
+  width: 30px;
+}
+
+.sign-img{
+  width: 120px;
+}
+
+.chef-spoon{
+  display: none;
+}
+
 }
