--- a/src/components/Menu/SpecialMenu.css
+++ b/src/components/Menu/SpecialMenu.css
@@ -90,6 +90,12 @@
   width: 50%;
 }
 
+.video-container{
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
 
 
 /* Small devices (vertical tablets and large phones, 317pxpx and up) */
