--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,17 +1,17 @@
-.body{
+.body {
   width: 100vw;
   height: 100vh;
   background-color: black;
 }
 
-.aboutus-container{
+.aboutus-container {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  background-color:black;
-  }
+  background-color: black;
+}
 
-.chef-container{
+.chef-container {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -19,13 +19,20 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  background-image: url('/Users/carloscordova/Desktop/restaurant-app/src/assets/bg.png') ;
+  background-image: url("/Users/carloscordova/Desktop/restaurant-app/src/assets/bg.png");
 }
 
-.container-lauerels{
+.container-lauerels {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
- 
+  height: 100vh;
+  background-color: black;
+}
+
+.video-container {
+  width: 100%;
+
   display: flex;
 }
-
-  
