--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -22,17 +22,21 @@
   background-image: url("/Users/carloscordova/Desktop/restaurant-app/src/assets/bg.png");
 }
 
+
+.video-container {
+  width: 100%;
+  display: flex;
+}
+
+
 .container-lauerels {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: black;
-}
+  background:url('/Users/carloscordova/Desktop/restaurant-app/src/assets/bg.png');
+ 
 
-.video-container {
-  width: 100%;
-
-  display: flex;
 }
