--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -87,6 +87,12 @@ flex-wrap: wrap;
 @media only screen and (min-width: 590px) {
 
   
+.about-us-title,
+.our-history-title {
+  font-size: 50px;
+  font-weight: bold;
+  color: #dcca87;
+}
 }
 
 
@@ -96,6 +102,12 @@ flex-wrap: wrap;
 
    
 
+.about-us-title,
+.our-history-title {
+  font-size: 70px;
+  font-weight: bold;
+  color: #dcca87;
+}
 
 
 }
@@ -103,6 +115,12 @@ flex-wrap: wrap;
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
    
+.about-us-title,
+.our-history-title {
+  font-size: 80px;
+  font-weight: bold;
+  color: #dcca87;
+}
 
 }
 
@@ -112,5 +130,11 @@ flex-wrap: wrap;
 @media only screen and (min-width: 1000px) {
     
 
+.about-us-title,
+.our-history-title {
+  font-size: 90px;
+  font-weight: bold;
+  color: #dcca87;
+}
 
 }
