--- a/src/components/Laurels/LaurelsCards/LaurelsCard.css
+++ b/src/components/Laurels/LaurelsCards/LaurelsCard.css
@@ -1,28 +1,82 @@
 .laurels-card{
+  display: flex;
+  flex-direction: column;
+  gap: px;
+  margin: 10px;
+  padding: auto;
   width: 300px;
-  height: 50px;
-  margin: 5px;
-  padding: 5px;
 
+  
 }
 
 .laurel-img{
   width: 50px;
   height: 50px;
+}
 
+/* MediasQueries */
+/*======================================== */
+
+/* Extra small devices (phones, 600px and less) */
+
+
+@media only screen and (max-width: 600px) 
+{
+   .laurels-card{
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  padding: auto;
+  width: 250px;
+
+  
+}
+
+.laurel-img{
+  width: 50px;
+  height: 50px;
 }
 
 .laurel-title{
-  font-size: 30px;
-}
-
-.laurel-paragraph{
   font-size: 15px;
 }
 
-.laurel-title{
-  color: #dcca87;
+}
+  
+/* Small devices (vertical tablets and large phones, 317pxpx and up) */
+@media only screen and (min-width: 317px) {
+    
+
+}
+
+/* Small devices (vertical tablets and large phones, 600px and up) */
+@media only screen and (min-width: 590px) {
+
+  
 }
 
 
 
+/* Medium devices (horizontal tablets, 768px and above) */
+@media only screen and (min-width: 768px) {
+
+   
+
+
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+
+}
+
+
+
+/* Extra large devices (Large laptops and desktops, 1200px and above) */
+@media only screen and (min-width: 1000px) {
+    
+
+
+}
