--- a/src/components/Laurels/Laurels.css
+++ b/src/components/Laurels/Laurels.css
@@ -98,8 +98,8 @@
 .laurels-title-container{
   width: 100%;
   display: flex;
- 
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   text-align: center;
  
@@ -117,6 +117,7 @@
  flex-wrap: wrap;
  align-items: center;
  text-align: center;
+ flex-direction: row;
 
 
 }
@@ -129,17 +130,7 @@
 }
 
 
-.awards-img{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  height:300px;
-  border-radius: 5px;
 
-
-}
 
 
 }
