--- a/src/components/Laurels/LaurelsCards/LaurelsCard.css
+++ b/src/components/Laurels/LaurelsCards/LaurelsCard.css
@@ -30,8 +30,8 @@
   }
 
   .laurel-img {
-    width: 35px;
-    height: 35px;
+    width: 20px;
+    height: 20px;
   }
 
   .laurel-title {
@@ -41,7 +41,18 @@
 
 /* Small devices (vertical tablets and large phones, 317pxpx and up) */
 @media only screen and (min-width: 317px) {
-  
+
+  .laurel-title {
+    font-size: 14px;
+  }
+  .laurel-img {
+    width: 10px;
+    height: 10px;
+  }
+
+  .laurel-paragraph{
+    font-size: 10px;
+  }
 }
 
 /* Small devices (vertical tablets and large phones, 600px and up) */
@@ -68,7 +79,7 @@
 }
 
  .laurel-title {
-    font-size: 20px;
+    font-size:20px;
   }
 
  
