--- a/src/components/Laurels/Laurels.css
+++ b/src/components/Laurels/Laurels.css
@@ -38,9 +38,9 @@
 }
 
 .awards-container{
-  width: 50%;
+  width: 100%;
  display: flex;
- justify-content: space-between;
+ justify-content: center;
  flex-wrap: wrap;
  align-items: center;
  text-align: center;
