--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -41,3 +41,13 @@
   height: 100vh;
   background-image: url('/Users/carloscordova/Desktop/restaurant-app/src/assets/bg.png');
 }
+
+.footer-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+}
