--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -15,6 +15,8 @@ button {
   justify-content: center;
 }
 
+
+
 .form > h1 {
   margin-bottom: 30px;
 }
@@ -50,10 +52,17 @@ textarea:focus {
   font-weight: bold;
 }
 
+
+.contactus-title{
+ color: #dcca87;
+ font-weight: bold;
+ font-size: 4em;
+ margin: 5px;
+ padding: 5px;
+}
 .form > button {
   padding: 20px;
   border: none;
-  background-color: rgb(2, 2, 110);
   font-weight: 500;
   font-size: 20px;
   border-radius: 3px;
