--- a/src/components/Booking/BookTable.css
+++ b/src/components/Booking/BookTable.css
@@ -102,14 +102,14 @@ form input::placeholder,
 select {
   color: #9a9a9a;
 }
-form input[type="submit"] {
+.book-table-btn[type="submit"] {
   color: #fff;
   background: #f2745f;
   padding: 12px 0;
   border-radius: 4px;
   cursor: pointer;
 }
-form input[type="submit"]:hover {
+.book-table-btn[type="submit"]:hover {
   opacity: 0.9;
 }
 @media (max-width: 992px) {
